unix-linux/linux-firewall-setup.txt


# allow outside access to a port.
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

# allow outside access to a range of ports.
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 4889:4897 -j ACCEPT

# allow a range of outside ipaddresses access to a port. in this case 192.168.0.* to port 1521
iptables -A INPUT -p tcp -m state -m tcp -s 192.168.100.0/255.255.255.0 --dport 1521 --state NEW -j ACCEPT
or
iptables -A INPUT -p tcp -m state -m tcp -s 192.168.100.0/24 --dport 1521 --state NEW -j ACCEPT
or for a larger block of addresses 
iptables -A INPUT -p tcp -m state -m tcp -s 192.168.0.0/16 --dport 1521 --state NEW -j ACCEPT
iptables -A INPUT -p tcp -m state -m tcp -s 192.0.0.0/8 --dport 1521 --state NEW -j ACCEPT

# replace a rule
iptables -R INPUT 1 -p tcp -s 192.168.0.0/24 --dport 80 -j ACCEPT

# block icmp traffic, except from 131.82.28.x addresses 
# --important-- the below rule replaces rule #2 use -A or -I to input or append
# however most times there will already be a rule governing icmp traffic thus you should replace (-R)
iptables -R INPUT 2 -p icmp -s 131.82.28.0/24 -j ACCEPT


# my fire wall rules
iptables -R INPUT 2 -p icmp -s 131.82.28.0/24 -j ACCEPT #--this updates a pre-existing default rule (#2), the others are additions
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 1159 -j ACCEPT 
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 1521 -j ACCEPT 
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 4889:4897 -j ACCEPT 
iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport 4899:4908 -j ACCEPT 
iptables -A INPUT -s 131.82.28.0/255.255.255.0 -p tcp -m state --state NEW -m tcp --dport 7803 -j ACCEPT
iptables -A INPUT -p tcp -m state --state NEW -m tcp -s 131.82.28.0/255.255.255.0 --dport 7803 -j ACCEPT
iptables -A INPUT -j REJECT --reject-with icmp-host-prohibited 


/etc/sysconfig/iptables

root@phl1vs373:/etc/sysconfig# cat iptables
# Generated by iptables-save v1.4.7 on Thu Mar  7 11:21:04 2013
*filter
:FORWARD ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -s 131.82.28.0/24 -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Webmin
-A INPUT -p tcp -m state -m tcp --dport 10000 --state NEW -j ACCEPT

# ssh
-A INPUT -p tcp -m state -m tcp -s 131.82.24.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.28.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.98.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.184.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.187.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.188.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.189.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.133.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.25.0/24 --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 164.87.88.0/24 --dport 22 --state NEW -j ACCEPT

# Oracle Management Server - tools
-A INPUT -p tcp -m state -m tcp --dport 1159 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 1521 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 4889:4897 --state NEW -j ACCEPT

# Oracle Management Server - web access
-A INPUT -p tcp -m state -m tcp --dport 4899:4908 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.24.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.28.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.98.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.133.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.187.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.188.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.189.0/24 --dport 7803 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.24.0/24 --dport 7103 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.28.0/24 --dport 7103 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.98.0/24 --dport 7103 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.133.0/24 --dport 7103 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.187.0/24 --dport 7103 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.188.0/24 --dport 7103 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp -s 131.82.189.0/24 --dport 7103 --state NEW -j ACCEPT

# ldap
-A INPUT -p udp -m state -m udp --dport 389 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 389 --state NEW -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited


COMMIT
# Completed on Thu Mar  7 11:21:04 2013
